--- a/res/values-es/string.xml
+++ b/res/values-es/string.xml
@@ -214,7 +214,7 @@
   <string name="hour_1"></string>
   <string name="in">En </string>
   <string name="incoming_call_notify">Llamada Entrante</string>
-  <string name="incoming_call_notify_tips">Avíseme si pierdo una llamada entrante en %s segundos.</string>
+  <string name="incoming_call_notify_tips">Avisar si tengo una llamada en %s segundos.</string>
   <string name="input_precise_person_info">Por favor, introduzca su información personal. Más detalles pueden ayudarnos a obtener resultados más precisos.</string>
   <string name="instruction_tip_1">"Observe 
 \u0009el progreso
