--- a/res/values-es/string.xml
+++ b/res/values-es/string.xml
@@ -1,44 +1,44 @@
 <resources>
-  <string name="about">Acerca</string>
+  <string name="about">Acerca de</string>
   <string name="about_copyright"></string>
   <string name="accept">Aceptar</string>
   <string name="action_exit">Salir</string>
-  <string name="action_local_ota">Tarjeta SD actualizada</string>
-  <string name="action_pop_about">Acerca</string>
-  <string name="action_pop_lab">Características Lab</string>
+  <string name="action_local_ota">Elija una actualización</string>
+  <string name="action_pop_about">Acerca de</string>
+  <string name="action_pop_lab">Ajustes Laboratorio</string>
   <string name="action_pop_my_bracelet">Ajustes Mi Band</string>
   <string name="action_pop_person_info">Mi perfil</string>
-  <string name="action_pop_smart_alarms">Alarma</string>
+  <string name="action_pop_smart_alarms">Alarmas</string>
   <string name="action_pop_unlock_screen">Desbloqueo de pantalla</string>
   <string name="action_pop_weixin_enter">Sincronizar con WeChat</string>
   <string name="age">Edad</string>
   <string name="ages">años</string>
   <string name="alarm">Alarma</string>
   <string name="alarm_cycle">Repetir</string>
-  <string name="alarm_device_not_connect">Por favor, vincule una Mi Band antes de configurar una alarma.</string>
+  <string name="alarm_device_not_connect">Por favor, vincule su Mi Band antes de configurar una alarma.</string>
   <string name="alarm_once">Una vez</string>
   <string name="alarm_repeat">Repetir</string>
-  <string name="alarm_repeat_title_format">Seleccionado %s</string>
+  <string name="alarm_repeat_title_format">%s seleccionado(s)</string>
   <string name="alarm_ring">Alarma</string>
   <string name="alarm_setting">Ajustes de Alarma</string>
   <string name="am">AM</string>
-  <string name="apk_download_ok">Descarga de la aplicación Mi Band completada.</string>
-  <string name="apk_uptodate">En este momento está usando la última versión.</string>
+  <string name="apk_download_ok">Aplicación Mi Band descargada.</string>
+  <string name="apk_uptodate">Estas usando la última versión.</string>
   <string name="app_exit_press_again">Toca el botón atrás de nuevo para salir</string>
-  <string name="app_info_version">Versión: %1$s Acuerdo: %2$s</string>
+  <string name="app_info_version">Versión: %1$s Condiciones del servicio: %2$s</string>
   <string name="app_name">Mi Band</string>
-  <string name="awake_format">, despertado %1$s veces.</string>
-  <string name="awake_format_1">, despertado una vez.</string>
+  <string name="awake_format">, se despertó %1$s veces.</string>
+  <string name="awake_format_1">, se despertó una vez.</string>
   <string name="back">Atrás</string>
   <string name="battery_charge_full">Batería cargada</string>
   <string name="battery_charging">Cargando...</string>
   <string name="battery_low_info">Poca batería, cargue su Mi Band.</string>
-  <string name="before_min">%s min. atrás</string>
-  <string name="bin_weixin_device_not_connect">Mi Band no conectada.</string>
+  <string name="before_min">hace %s min</string>
+  <string name="bin_weixin_device_not_connect">Mi Band no está conectada.</string>
   <string name="bind_bracelet">Mi Band encontrada</string>
   <string name="bind_bracelet_ok">Enlazado correctamente.</string>
   <string name="bind_new_mili">Vincular una nueva Mi Band</string>
-  <string name="bind_weixin_failed">No se pudo, por favor vuelva a intentarlo.</string>
+  <string name="bind_weixin_failed">No se pudo generar el QR, intentalo de nuevo.</string>
   <string name="bind_weixin_new_disable_tips">"Después de enlazar con su cuenta de Wechat y seguir a la cuenta de servicio de Wechat de Mi Band,
 \u0009puede comprobar información como el número de pasos dados. También puede ver el estado de sus resultados entre los de sus amigos."</string>
   <string name="bind_weixin_new_now">Sincronizando con Wechat, un momento...</string>
@@ -47,7 +47,7 @@
   <string name="bind_weixin_now">Generando código QR...</string>
   <string name="bind_weixin_qrcode_name">Código QR Mi Band</string>
   <string name="bind_weixin_save">Guardado en Galería,</string>
-  <string name="bind_weixin_succ">¡Enlazado!</string>
+  <string name="bind_weixin_succ">¡Enlazado con WeChat!</string>
   <string name="bind_weixin_tips_1">Pulse para generar un código QR y guardárlo en la Galería.</string>
   <string name="bind_weixin_tips_2">Pulse Abrir WeChat, entre en Escanear Código QR y seleccione el código QR guardado en la Galería.</string>
   <string name="bind_weixin_title">Sincronice para compartir y competir con tus amigos.</string>
@@ -59,15 +59,15 @@
   <string name="body">Cuello</string>
   <string name="bracelet_info_battery">%s%%</string>
   <string name="bracelet_info_deviceid">%s</string>
-  <string name="bracelet_info_fw_version">Firmware: %1$s Acuerdo: %2$s</string>
+  <string name="bracelet_info_fw_version">Firmware: %1$s Condiciones del servicio: %2$s</string>
   <string name="bracelet_info_mac_address">Nombre: %1$s Dirección: %2$s</string>
   <string name="bracelet_login_info">Mi Cloud proporcionará sugerencias profesionales basadas ​​en sus actividades y el desempeño de su sueño.</string>
   <string name="bracelet_login_info_2">"Inicie sesión si está de acuerdo con "</string>
   <string name="bracelet_login_title">Hola, soy Mi Band.</string>
-  <string name="bracelet_not_connected_bat_unknown">Mi Band no vinculada, estado desconocido.</string>
-  <string name="bracelet_not_found_info">Por favor, búsquela de nuevo cuando vea una de las luces de su Mi Band parpadear.</string>
-  <string name="bracelet_not_found_title">Por favor, enchúfela a la corriente.</string>
-  <string name="bt_operation_failed_tips">El Bluetooth no funciona correctamente, por favor inténtelo más tarde.</string>
+  <string name="bracelet_not_connected_bat_unknown">Ninguna Mi Band detectada.</string>
+  <string name="bracelet_not_found_info">Por favor, búsquela de nuevo cuando vea parpadear uno de los leds de su Mi Band.</string>
+  <string name="bracelet_not_found_title">Asegúrese de que la batería de su Mi Band esta cargada.</string>
+  <string name="bt_operation_failed_tips">El Bluetooth no está funcionando correctamente. Espere uno o dos minutos y vuelva a intentarlo.</string>
   <string name="cal">kcal</string>
   <string name="cancel">Cancelar</string>
   <string name="check_upgrade">Buscar actualizaciones</string>
@@ -77,8 +77,8 @@
   <string name="come_from_xiaomi_bracelet">Desde Mi Band</string>
   <string name="confirm">Confirmar</string>
   <string name="congrats">¡Felicidades!</string>
-  <string name="connect_bracelet_now">Conexión en curso</string>
-  <string name="content_too_short">Falta contenido.</string>
+  <string name="connect_bracelet_now">Conectando...</string>
+  <string name="content_too_short">Introduzca el contenido del mensaje.</string>
   <string name="continue_reach_goal">Alcance sus metas</string>
   <string name="continue_reach_goal_new_record">Creado un nuevo récord</string>
   <string name="continue_tips_format">Su mejor marca sería alcanzar su meta durante %1$s días.</string>
@@ -125,14 +125,14 @@
   <string name="dynamic_pull_not_sync_today">No se ha sincronizado hoy.</string>
   <string name="dynamic_pull_pull_to_sync">Tire para sincronizar datos</string>
   <string name="dynamic_pull_release_to_sync">Suelte para sincronizar</string>
-  <string name="dynamic_pull_sync_after_connected">Sincronizar automáticamente una vez conectado.</string>
+  <string name="dynamic_pull_sync_after_connected">Sincronizará automáticamente una vez conectado.</string>
   <string name="dynamic_pull_sync_error">Error al sincronizar, tire para refrescar.</string>
   <string name="dynamic_pull_syncing">Sincronizando...</string>
   <string name="dynamic_pull_syncing_progress">Sincronizado %s%%</string>
   <string name="dynamic_pull_update_report">Actualizados %s registros</string>
   <string name="dynamic_sleep_active">Tiempo despierto</string>
-  <string name="dynamic_sleep_active_end">Fin sueño</string>
-  <string name="dynamic_sleep_active_start">Inicio sueño</string>
+  <string name="dynamic_sleep_active_end">Despertandose...</string>
+  <string name="dynamic_sleep_active_start">Durmiendose...</string>
   <string name="dynamic_sleep_deep">Profundo</string>
   <string name="dynamic_sleep_deep_title">Sueño profundo %s</string>
   <string name="dynamic_sleep_shallow">Ligero</string>
@@ -143,13 +143,13 @@
   <string name="dynamic_tip_step_sync_time_min">hace %d min</string>
   <string name="dynamic_tip_step_unsynced">No actualizado</string>
   <string name="dynamic_tip_sync_progress">Sincronizando datos %d%%</string>
-  <string name="dynamic_tip_sync_time">%s sincronizado</string>
+  <string name="dynamic_tip_sync_time">Última sincronizacion %s</string>
   <string name="dynamic_tip_unweared">No activado</string>
   <string name="dynamic_title_sleep">Anoche</string>
   <string name="dynamic_title_step">Hoy</string>
   <string name="enable_debug_log">¡Modo de depuración activado!</string>
   <string name="error_code">Error</string>
-  <string name="everyday">A diario</string>
+  <string name="everyday">Cada día</string>
   <string name="exit_app">Salir</string>
   <string name="exit_app_continue">Continuar</string>
   <string name="exit_app_tips">"¿Seguro que desea salir?
@@ -236,12 +236,12 @@
   <string name="kilogram">Kg</string>
   <string name="km">km</string>
   <string name="lab_factory_exercise_state_paused">Pausar</string>
-  <string name="lab_factory_exercise_state_ready">IR</string>
+  <string name="lab_factory_exercise_state_ready">Empezar</string>
   <string name="lab_factory_exercise_state_stopped">Parar</string>
   <string name="lab_factory_exit_press_again">Pulse el botón atrás de nuevo</string>
-  <string name="lab_factory_internal_test">Aalizar el modo deportivo y pruebas</string>
+  <string name="lab_factory_internal_test">Analizar el modo deportivo y pruebas</string>
   <string name="lab_factory_share_photo">Foto</string>
-  <string name="lab_factory_share_photo_menu_camera">Camara</string>
+  <string name="lab_factory_share_photo_menu_camera">Cámara</string>
   <string name="lab_factory_share_photo_menu_gallery">Galería</string>
   <string name="lab_factory_share_photo_menu_title">Seleccionar foto desde</string>
   <string name="lab_factory_sport_analyser_activity_not_found">Error al cargar la interfaz de usuario</string>
@@ -300,8 +300,8 @@
     <string name="lab_factory_sport_vote_result_sub_desc">Usted votó por el</string>
     <string name="lab_factory_sport_vote_sub_desc">Tal vez la próxima vez que se actualice la App,aparezca en el laboratorio deportes</string>
   <string name="lab_factory_sport_without_pb_info">&lt;font color=#f57130&gt;%1$s&lt;/font&gt;</string>
-  <string name="lab_factory_title">Características Lab</string>
-  <string name="left_hand">Izquierda</string>
+  <string name="lab_factory_title">Ajustes Laboratorio</string>
+  <string name="left_hand">Muñeca Izquierda</string>
   <string name="light_color">Color del LED</string>
   <string name="light_color_title">Color de la luz para indicar el progreso del entrenamiento</string>
   <string name="local_app_failed">No se pudo obtener los datos de la versión actual.</string>
@@ -310,7 +310,7 @@
   <string name="login_failed_check_sys_time">Error al iniciar sesión, por favor revise la configuración de Tiempo/Hora y utilice la hora proporcionada por la red.</string>
   <string name="logining">Iniciando sesión...</string>
   <string name="look_device_list">Buscar una Mi Band cercana</string>
-  <string name="main_ui_share_tips">"Trabajado durante %1$s%2$s hoy.
+  <string name="main_ui_share_tips">"Caminando durante %1$s%2$s hoy.
 \u0009%3$s"</string>
   <string name="main_ui_sleep_share_tips">"Sueño ligero %1$s%2$s
 \u0009Dormido %3$s, despierto %4$s."</string>
@@ -395,7 +395,7 @@
   <string name="pull_to_refresh_pull_label">Tire para actualizar</string>
   <string name="pull_to_refresh_refreshing_label">Cargando…</string>
   <string name="pull_to_refresh_release_label">Suelte para actualizar</string>
-  <string name="ran">corrido </string>
+  <string name="ran">corrido </string>
   <string name="red">Rojo</string>
   <string name="register">Registrarse</string>
   <string name="remain_days_format">%s días desde la última carga</string>
@@ -404,7 +404,7 @@
   <string name="reset_mili">Restablecer Mi Band</string>
   <string name="restart_bluetooth_tips">Por favor, reinicie el Bluetooth.</string>
   <string name="retry">Intentar de nuevo</string>
-  <string name="right_hand">Derecha</string>
+  <string name="right_hand">Muñeca Derecha</string>
   <string name="runed">Corrido</string>
   <string name="s_mili">Mi Band</string>
   <string name="search_bracelet">Buscando Mi Band</string>
@@ -422,8 +422,8 @@
   <string name="set_mili_name_ok">Nuevo nombre guardado.</string>
   <string name="set_person_goal">Establecer Meta</string>
   <string name="set_sport_goal">Establecer Meta</string>
-  <string name="setting_about_app">Versión de la App </string>
-  <string name="setting_about_fw">Versión de firmware </string>
+  <string name="setting_about_app">Versión de la aplicación </string>
+  <string name="setting_about_fw">Versión de firmware </string>
   <string name="setting_feedback_address">¿Cómo podemos contactar contigo?</string>
   <string name="setting_feedback_hint">Gracias por su tiempo. Su opinión es importante para nosotros.</string>
   <string name="setting_feedback_send">Enviar</string>
@@ -491,7 +491,7 @@
   <string name="smart_alarm_clock">Alarma</string>
   <string name="smart_alarm_notify">Alarma Inteligente</string>
   <string name="smart_wake_up">Alarma Inteligente</string>
-  <string name="smart_wake_up_info">Por favor, despiértame 30 minutos antes de tiempo establecido. Me gustaría levantarme cuando mi cuerpo ya está despierto.</string>
+  <string name="smart_wake_up_info">Por favor, despiértame unos 30 minutos antes de tiempo.  Me gustaría levantarme cuando mi cuerpo ya está despierto.</string>
   <string name="start">Inicio</string>
   <string name="start_download">Descargando en segundo plano...</string>
   <string name="start_use">Iniciar</string>
@@ -596,7 +596,7 @@
   <string name="visit_micom">Visitar el sitio oficial</string>
   <string name="wait">Un momento...</string>
   <string name="walked">Caminado</string>
-  <string name="wear_hand">Muñeca</string>
+  <string name="wear_hand">Posición</string>
   <string name="weared_days">Días en total</string>
   <string name="weather_aqi">Calidad del aire %s</string>
   <string name="weather_description_cloudy">Nublado,</string>
