--- a/res/values/public.xml
+++ b/res/values/public.xml
@@ -1919,6 +1919,9 @@
     <public type="string" name="sport_ranking_desc_great" id="0x7f0c0267" />
     <public type="string" name="sport_new_record_ropeskipping" id="0x7f0c0268" />
     <public type="string" name="percent_mark" id="0x7f0c0269" />
+	<public type="string" name="notifications" id="0x7f0c0270" />
+	<public type="string" name="insert_number_vibrations" id="0x7f0c0271" />
+	<public type="string" name="set_notifications_app" id="0x7f0c0272" />
     <public type="string" name="share_step_ranking" id="0x7f0c026a" />
     <public type="string" name="lab_factory_internal_test" id="0x7f0c026b" />
     <public type="string" name="sport_running_helper_test" id="0x7f0c026c" />
@@ -1927,6 +1930,7 @@
     <public type="string" name="bind_qq_health_tip_another_qq" id="0x7f0c01ff" />
     <public type="string" name="share_to_content_for_event" id="0x7f0c0200" />
     <public type="string" name="share_to_topic_for_event" id="0x7f0c0201" />
+	
     <public type="array" name="weeks" id="0x7f0d0000" />
     <public type="array" name="weeks_short" id="0x7f0d0001" />
     <public type="array" name="months" id="0x7f0d0002" />
