--- a/res/layout/setting_fragment.xml
+++ b/res/layout/setting_fragment.xml
@@ -54,6 +54,13 @@
                     </RelativeLayout>
                 </LinearLayout>
                 <include layout="@layout/split_line_with_margin" />
+                <LinearLayout android:background="@drawable/bg_item" android:paddingLeft="@dimen/mili_margin" android:paddingTop="6.0dip" android:paddingRight="@dimen/mili_margin" android:paddingBottom="6.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/item_height" android:onClick="extendSetting">
+                    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
+                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Configurar Notificaciones" style="@style/ListItemTitleText" />
+                    </LinearLayout>
+                    <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:src="@drawable/ic_indicator_right_arrow" />
+                </LinearLayout>
+                <include layout="@layout/split_line_with_margin" />
                 <LinearLayout android:id="@id/vibrate_notify" android:background="@drawable/bg_item" android:paddingLeft="@dimen/mili_margin" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stroke_width_minus" android:layout_marginBottom="@dimen/stroke_width_minus" android:minHeight="@dimen/item_height">
                     <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                         <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vibrate_notify" style="@style/ListItemTitleText" />
@@ -62,13 +69,6 @@
                     <RelativeLayout android:gravity="center" android:paddingRight="@dimen/mili_margin" android:clickable="true" android:layout_width="63.0dip" android:layout_height="fill_parent">
                         <Switch android:layout_gravity="center" android:id="@id/vibrate_notify_switch" android:background="@drawable/switch_track_enable" android:focusable="false" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="40.0dip" android:layout_height="21.0dip" android:textOn="" android:textOff="" android:thumb="@drawable/switch_thumb" android:track="@drawable/switch_track_trans" android:switchMinWidth="38.0dip" android:thumbTextPadding="10.0dip" />
                     </RelativeLayout>
-                </LinearLayout>
-				<include layout="@layout/split_line_with_margin" />
-                <LinearLayout android:background="@drawable/bg_item" android:paddingLeft="@dimen/mili_margin" android:paddingTop="6.0dip" android:paddingRight="@dimen/mili_margin" android:paddingBottom="6.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/item_height" android:onClick="extendSetting">
-                    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
-                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_notifications_app" style="@style/ListItemTitleText" />
-                    </LinearLayout>
-                    <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:src="@drawable/ic_indicator_right_arrow" />
                 </LinearLayout>
                 <include layout="@layout/split_line_with_margin" />
                 <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
