--- a/res/layout/mks_setting_app.xml
+++ b/res/layout/mks_setting_app.xml
@@ -7,7 +7,8 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
             <TextView android:textSize="18.0dip" android:tag="TITLE" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Nº de vibraciones" />
             <CheckedTextView android:gravity="center_vertical" android:tag="VIBRO_STARTED" android:padding="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:checkMark="?android:textCheckMark" android:text="Configurar Vibraciones" android:onClick="vibroChange" />
-            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
+             <CheckedTextView android:gravity="center_vertical" android:tag="NOW_STARTED" android:padding="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:checkMark="?android:textCheckMark" android:text="Notificación sin retardo" android:onClick="nowChange" />
+			<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                 <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Nº de vibraciones" />
                 <EditText android:tag="VIBRO_COUNT" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="wrap_content" android:maxLength="1" android:inputType="number" />
                 <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="veces" />
