--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -59,15 +59,15 @@
         <item>Very Unhealthy</item>
     </string-array>
     <string-array name="weight_test_unit">
-        <item>千克</item>
-        <item>斤</item>
-        <item>镑</item>
+        <item>kg</item>
+        <item>kg</item>
+        <item>pound</item>
     </string-array>
     <string-array name="weight_test_class">
-        <item>过轻</item>
-        <item>正常</item>
-        <item>过重</item>
-        <item>肥胖</item>
-        <item>非常肥胖</item>
+        <item>Too light</item>
+        <item>Normal</item>
+        <item>Overweight</item>
+        <item>Obesity</item>
+        <item>FATSO</item>
     </string-array>
 </resources>
