Notification Settings String added
A little sneak how add all strings in multi-language if someone want to
do... this dirty work ;)

--- a/res/layout/setting_fragment.xml
+++ b/res/layout/setting_fragment.xml
@@ -53,7 +53,7 @@
                 <include layout="@layout/split_line_with_margin" />
                 <LinearLayout android:background="@drawable/bg_item" android:paddingLeft="@dimen/mili_margin" android:paddingTop="6.0dip" android:paddingRight="@dimen/mili_margin" android:paddingBottom="6.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/item_height" android:onClick="extendSetting">
                     <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
-                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Configurar Notificaciones" style="@style/ListItemTitleText" />
+                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notification_settings" style="@style/ListItemTitleText" />
                     </LinearLayout>
                     <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:src="@drawable/ic_indicator_right_arrow" />
                 </LinearLayout>
